# spiderfoot

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yml  API_README.md  CHANGELOG.md  CHANGELOG_CYCLES.md  CODE_COVERAGE_IMPROVEMENT_PLAN.md  CODE_COVERAGE_IMPROVEMENT_PLAN_DETAILED.md  CONTRIBUTING.md  DOCUMENTATION_SYSTEM_REVIEW.md  Dockerfile  Dockerfile.active-worker  Dockerfile.full  LICENSE  MANIFEST.in  PHASE_1_DATABASE_COVERAGE_SUMMARY.md  PRODUCTION_DEPLOYMENT.md  Pipfile  README.md  SECURITY_AUDIT_v5.9.2.md  SECURITY_IMPLEMENTATION.md  THANKYOU  VERSION  VERSION_MANAGEMENT_IMPLEMENTATION.md  api_utils.py  backup_sfwebui.py  build_docs.py  cleanup_script.py  debug_modules.py  demo_workflow.py  deploy-production.ps1  deploy-production.sh  docker-compose-dev.yml  docker-compose-full.yml  docker-compose-microservices.yml  docker-compose-prod.yml  docker-compose-simple.yml  docker-compose.microservices.yml  (+91 more)
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  dependabot.yml
cli/: Makefile  README.md  go.mod  go.sum  main.go
config/: vector.toml
correlations/: README.md  account_external.yaml  bgp_as_discovered.yaml  blockchain_risk_aggregation.yaml  cert_expired.yaml  cloud_bucket_open.yaml  cloud_bucket_open_related.yaml  cohosted_site_detected.yaml  cross_scan_outlier_email.yaml  cross_scan_outlier_hosting.yaml  cross_scan_outlier_technology.yaml  cross_scan_rare_technology.yaml  cross_scan_shared_affiliate.yaml  cross_scan_shared_crypto.yaml  cross_scan_shared_darknet.yaml  cross_scan_shared_domain.yaml  cross_scan_shared_email.yaml  cross_scan_shared_exposure.yaml  cross_scan_shared_hosting.yaml  cross_scan_shared_ip.yaml  cross_scan_shared_leak.yaml  cross_scan_shared_malicious.yaml  cross_scan_shared_password.yaml  cross_scan_shared_phone.yaml  cross_scan_shared_social.yaml  cross_scan_shared_ssl.yaml  cross_scan_shared_technology.yaml  cross_scan_shared_username.yaml  crypto_address_found.yaml  darknet_mention.yaml  data_from_base64.yaml  data_from_docmeta.yaml  database_exposed.yaml  dev_or_test_system.yaml  dns_spf_issues.yaml  dns_srv_exposed.yaml  dns_txt_sensitive.yaml  dns_zone_transfer_possible.yaml  egress_ip_from_wikipedia.yaml  email_generic_exposed.yaml  (+59 more)
doc/: API_MIGRATION_GUIDE.md  README_API.md
docker/: Dockerfile.active-scanner  Dockerfile.api  Dockerfile.base  Dockerfile.scanner  Dockerfile.webui  build.sh  env.example  env.simple.example  nginx-microservices.conf
docker-compose-examples/: docker-compose-prod.yml  docker-compose.yml
docker-compose-production-files/: .env.example  nginx.conf
docs/: DOCUMENTATION_BUILD.md  DOCUMENTATION_FIXES.md  PRODUCTION_READY.md  README.md  VERSION_MANAGEMENT.md  WORKFLOW_DOCUMENTATION.md  WORKSPACE_INTEGRATION_COMPLETE.md  basic_usage.md  cli_usage.md  conf.py  configuration.md  contributing.md  docker_deployment.md  enterprise_deployment.md  god_object_audit.md  index.md  index.rst  installation.md  logger_usage.md  modules_guide.md  overview.md  python_api.md  quickstart.md  requirements.txt  security_considerations.md  troubleshooting.md  web_interface.md  webhook_integration.md
documentation/: ARCHITECTURE.md  Home.md  MODULARIZATION_ROADMAP.md  MODULE_MIGRATION_GUIDE.md  README.md  active-scan-worker.md  advanced.md  ai_structured_outputs.md  api_reference.md  async_plugin_guide.md  configuration.md  developer_guide.md  docker_deployment.md  enhanced_modules.md  faq.md  getting_started.md  installation.md  microservices.md  modules.md  overview.md  quickstart.md  security.md  security_integration.md  streaming_export.md  troubleshooting.md  typescript_sdk.md  user_guide.md
dyn/: opts.tmpl
examples/: integration_example.py  logging_examples.py
frontend/: .dockerignore  Dockerfile  eslint.config.js  index.html  nginx.conf  openapi-ts.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
modules/: __init__.py  example_module.py  sfp_4chan.py  sfp__ai_threat_intel.py  sfp__security_hardening.py  sfp__stor_db.py  sfp__stor_db_advanced.py  sfp__stor_elasticsearch.py  sfp__stor_jsonl.py  sfp__stor_stdout.py  sfp_abstractapi.py  sfp_abusech.py  sfp_abuseipdb.py  sfp_abusix.py  sfp_accounts.py  sfp_adblock.py  sfp_adguard_dns.py  sfp_adsbexchange.py  sfp_advanced_correlation.py  sfp_ahmia.py  sfp_ai_summary.py  sfp_alienvault.py  sfp_alienvaultiprep.py  sfp_aparat.py  sfp_apileak.py  sfp_apivoid.py  sfp_apple_itunes.py  sfp_aprsfi.py  sfp_arbitrum.py  sfp_archiveorg.py  sfp_arin.py  (+317 more)
(+2416 files in other folders)
