[flake8]
flake8-max-line-length = 120
max-complexity = 60
docstring-convention = google
ignore-decorators = property
select = C,E,F,W,B,B9,DAR,DUO,R,A,S,Q0,SIM,SFS
# Note: B902, B907 and ANN should be fixed instead of ignored
extend-ignore = E501 W503 B006 B950 SFS301 SF01 Q000 B902 B907 ANN
# Note: most of these should be fixed instead of ignored
per-file-ignores =
    spiderfoot/event.py:A003
    spiderfoot/db.py:SFS101
    modules/*:SIM102,SIM113,SIM114
    modules/sfp_alienvault.py:C901
    modules/sfp_binaryedge.py:C901
    modules/sfp_bitcoin.py:SFS101
    spiderfoot/__init__.py:F401
    sfcli.py:DAR
    sfwebui.py:A001,A002,B905
    test/*:SIM117,B904,ANN
    docs/conf.py:A

[darglint]
docstring_style=google

[options]
install_requires =
    psycopg2>=2.9.3,<3

[metadata]
version = 5.0.2
description = SpiderFoot - Open Source Intelligence Automation Tool
author = Agostino Panico
author_email = van1sh@van1shland.io
url = https://www.van1shland.io/spiderfoot
license = MIT
keywords = osint, spiderfoot, threat intelligence, open source intelligence, reconnaissance, information gathering
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Security
    Topic :: Security :: Cryptography
    Topic :: Security :: Information Analysis
    Topic :: Security :: Information Analysis :: OSINT
    Topic :: Security :: Information Analysis :: Reconnaissance
    Topic :: Security :: Information Analysis :: Threat Intelligence
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Networking
    Topic :: System :: Networking :: Monitoring
    Topic :: System :: Networking :: Security
    Topic :: System :: Systems Administration
    Topic :: Utilities
    Typing :: Typed
    Typing :: Typed :: Data
    Typing :: Typed :: Data Analysis
    Typing :: Typed :: Data Science
    Typing :: Typed :: Data Structures
    Typing :: Typed :: Data Validation
    Typing :: Typed :: Data Visualization
    Typing :: Typed :: Database
    Typing :: Typed :: Database :: SQL
    Typing :: Typed :: Database :: SQL :: PostgreSQL
    Typing :: Typed :: Database :: SQL :: SQLite
    Typing :: Typed :: Database :: SQL :: MySQL
    Typing :: Typed :: Database :: SQL :: MariaDB
    Typing :: Typed :: Database :: SQL :: Oracle
    Typing :: Typed :: Database :: SQL :: Microsoft SQL Server
    Typing :: Typed :: Database :: SQL :: IBM Db2
    Typing :: Typed :: Database :: SQL :: Amazon Aurora
    Typing :: Typed :: Database :: SQL :: Amazon RDS
    Typing :: Typed :: Database :: SQL :: Amazon Redshift
    Typing :: Typed :: Database :: SQL :: Amazon DynamoDB
    Typing :: Typed :: Database :: SQL :: Google Cloud SQL
    Typing :: Typed :: Database :: SQL :: Azure SQL Database
    Typing :: Typed :: Database :: SQL :: Snowflake