[flake8]
flake8-max-line-length = 120
max-complexity = 60
docstring-convention = google
ignore-decorators = property
select = C,E,F,W,B,B9,DAR,DUO,R,A,S,Q0,SIM,SFS
# Note: B902, B907 and ANN should be fixed instead of ignored
extend-ignore = E501 W503 B006 B950 SFS301 SF01 Q000 B902 B907 ANN
# Note: most of these should be fixed instead of ignored
per-file-ignores =
    spiderfoot/event.py:A003
    spiderfoot/db.py:SFS101
    modules/*:SIM102,SIM113,SIM114
    modules/sfp_alienvault.py:C901
    modules/sfp_binaryedge.py:C901
    modules/sfp_bitcoin.py:SFS101
    spiderfoot/__init__.py:F401
    sfcli.py:DAR
    sfwebui.py:A001,A002,B905
    test/*:SIM117,B904,ANN
    docs/conf.py:A

[darglint]
docstring_style=google

[options]
install_requires =
    psycopg2>=2.9.3,<3

[metadata]
version = attr: spiderfoot.__version__
description = SpiderFoot - Open Source Intelligence Automation Tool
author = Steve Micallef, Agostino Panico
author_email = steve@binarypool.com, van1sh@van1shland.io
url = https://github.com/poppopjmp/spiderfoot
license = MIT
python_requires = >=3.9
